--- a/src/vboa/templates/eboa_nav/start_stop.html
+++ b/src/vboa/templates/eboa_nav/start_stop.html
@@ -1,6 +1,6 @@
 <div class="col-xs-3">
   <label>Start</label>
-  <div class="input-group date" id="start">
+  <div class="input-group date">
     <input type="text" class="form-control" name="start"/>
     <span class="input-group-addon">
       <span class="glyphicon glyphicon-calendar"></span>
@@ -14,7 +14,7 @@
 </div>
 <div class="col-xs-3">
   <label>Stop</label>
-  <div class="input-group date" id="stop">
+  <div class="input-group date">
     <input type="text" class="form-control"  name="stop"/>
     <span class="input-group-addon">
       <span class="glyphicon glyphicon-calendar"></span>
