--- a/src/vboa/templates/eboa_nav/validity_start_validity_stop.html
+++ b/src/vboa/templates/eboa_nav/validity_start_validity_stop.html
@@ -1,6 +1,6 @@
 <div class="col-xs-3">
   <label>Validity start</label>
-  <div class="input-group date" id="validity-start">
+  <div class="input-group date">
     <input type="text" class="form-control" name="validity_start"/>
     <span class="input-group-addon">
       <span class="glyphicon glyphicon-calendar"></span>
@@ -14,7 +14,7 @@
 </div>
 <div class="col-xs-3">
   <label>Validity stop</label>
-  <div class="input-group date" id="validity-stop">
+  <div class="input-group date">
     <input type="text" class="form-control" name="validity_stop"/>
     <span class="input-group-addon">
       <span class="glyphicon glyphicon-calendar"></span>
