--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -57,8 +57,8 @@
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
                   <label>Gauge system like</label>
-                  <input class="form-control" list="gauge_systems" name="gauge_system_like"/>
-                  <datalist id="gauge_systems">
+                  <input class="form-control" list="gauge_system_like_events" name="gauge_system_like"/>
+                  <datalist id="gauge_system_like_events">
                   </datalist>
                 </div>
               </div>
