--- a/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
+++ b/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
@@ -3,31 +3,31 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-xs-12">
-          <form role="form" method=post action="/eboa_nav/query-events">
-            <div class="row">
-              <div class="col-xs-2" id="div-gauge-name">
-                <label>Gauge name like</label>
-                <input class="form-control" list="gauge_names" name="gauge_name_like" onfocus="vboa.fill_gauges()"/>
-                <datalist id="gauge_names">
-                </datalist>
-              </div>
-              <div class="col-xs-2" id="div-gauge-system">
-                <label>Gauge system like</label>
-                <input class="form-control" list="gauge_systems" name="gauge_system_like" onfocus="vboa.fill_gauges()"/>
-                <datalist id="gauge_systems">
-                </datalist>
-              </div>
-              <div class="col-xs-2" id="div-dim-signature">
+          <form role="form" method=post action="/eboa_nav/query-dim-signatures">
+            <div class="row query-dims">
+              <div class="col-xs-3 query-dim-signatures">
                 <label>DIM signature like</label>
-                <input class="form-control" list="dim_signatures" name="dim_signature_like" onfocus="vboa.fill_dim_signatures()"/>
-                <datalist id="dim_dignatures">
+                <input class="form-control" list="dim_signature_likes_dims" name="dim_signature_like"/>
+                <datalist id="dim_signature_like_dims">
                 </datalist>
               </div>
-              <div class="col-xs-2" id="div-dim-exec-name">
-                <label>DIM signature like</label>
-                <input class="form-control" list="dim_exec_names" name="dim_exec_name_like" onfocus="vboa.fill_dim_signatures()"/>
-                <datalist id="dim_exec_names">
+              <div class="col-xs-3 query-processors">
+                <label>Processor like</label>
+                <input class="form-control" list="processor_like_dims" name="processor_like"/>
+                <datalist id="processor_like_dims">
                 </datalist>
+              </div>
+            </div>
+            <div class="row query-dims">
+              <div class="col-xs-3 query-dim-signatures">
+                <label>DIM signatures</label>
+                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                </select>
+              </div>
+              <div class="col-xs-3 query-processors">
+                <label>Processors</label>
+                <select name="pocessors" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                </select>
               </div>
             </div>
             <div>
