--- a/src/vboa/templates/eboa_nav/query_gauges_content.html
+++ b/src/vboa/templates/eboa_nav/query_gauges_content.html
@@ -1,33 +1,48 @@
-<div class="col-lg-12" id="nav-events">
+<div class="col-lg-12" id="nav-gauges">
   <div class="panel panel-default">
     <div class="panel-body">
       <div class="row">
         <div class="col-xs-12">
-          <form role="form" method=post action="/eboa_nav/query-events">
+          <form role="form" method=post action="/eboa_nav/query-gauges">
+            <div>
+              <div class="row  query-gauges">
+                <div class="col-xs-3 query-gauge-names">
+                  <label>Gauge name like</label>
+                  <input class="form-control" list="gauge_name_like_gauges" name="gauge_name_like"/>
+                  <datalist id="gauge_name_like_gauges">
+                  </datalist>
+                </div>
+                <div class="col-xs-3 query-gauge-systems">
+                  <label>Gauge system like</label>
+                  <input class="form-control" list="gauge_system_like_gauges" name="gauge_system_like"/>
+                  <datalist id="gauge_system_like_gauges">
+                  </datalist>
+                </div>
+              </div>
+              <div class="row query-gauges">
+                <div class="col-xs-3 query-gauge-names">
+                  <label>Gauge names</label>
+                  <select name="gauge_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                  </select>
+                </div>
+                <div class="col-xs-3 query-gauge-systems">
+                  <label>Gauge systems</label>
+                  <select name="gauge_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                  </select>
+                </div>
+              </div>
+            </div>
             <div class="row">
-              <div class="col-xs-2" id="div-gauge-name">
-                <label>Gauge name like</label>
-                <input class="form-control" list="gauge_names" name="gauge_name_like" onfocus="vboa.fill_gauges()"/>
-                <datalist id="gauge_names">
-                </datalist>
-              </div>
-              <div class="col-xs-2" id="div-gauge-system">
-                <label>Gauge system like</label>
-                <input class="form-control" list="gauge_systems" name="gauge_system_like" onfocus="vboa.fill_gauges()"/>
-                <datalist id="gauge_systems">
-                </datalist>
-              </div>
-              <div class="col-xs-2" id="div-dim-signature">
+              <div class="col-xs-3 query-dim-signatures">
                 <label>DIM signature like</label>
-                <input class="form-control" list="dim_signatures" name="dim_signature_like" onfocus="vboa.fill_dim_signatures()"/>
-                <datalist id="dim_dignatures">
+                <input class="form-control" list="dim_signature_like_sources" name="dim_signature_like"/>
+                <datalist id="dim_signature_like_sources">
                 </datalist>
               </div>
-              <div class="col-xs-2" id="div-dim-exec-name">
-                <label>DIM signature like</label>
-                <input class="form-control" list="dim_exec_names" name="dim_exec_name_like" onfocus="vboa.fill_dim_signatures()"/>
-                <datalist id="dim_exec_names">
-                </datalist>
+              <div class="col-xs-3 query-dim-signatures">
+                <label>DIM signatures</label>
+                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                </select>
               </div>
             </div>
             <div>
