Add format for displaying the queried DIM signatures

--- a/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
+++ b/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
@@ -13,7 +13,7 @@
               </div>
               <div class="col-xs-3 query-processors">
                 <label>Processor like</label>
-                <input class="form-control" list="processor_like_dims" name="processor_like"/>
+                <input class="form-control" list="processor_like_dims" name="dim_exec_name_like"/>
                 <datalist id="processor_like_dims">
                 </datalist>
               </div>
@@ -26,7 +26,7 @@
               </div>
               <div class="col-xs-3 query-processors">
                 <label>Processors</label>
-                <select name="pocessors" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <select name="dim_exec_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
                 </select>
               </div>
             </div>
