--- a/src/vboa/templates/eboa_nav/explicit_references_nav.html
+++ b/src/vboa/templates/eboa_nav/explicit_references_nav.html
@@ -1,3 +1,48 @@
 {% extends "eboa_nav/eboa_nav.html" %}
 {% block li_active_explicit_references %}class="active"{% endblock %}
 {% block div_active_explicit_references %}active{% endblock %}
+{% block explicit_references_nav_content %}
+<div>
+  <a href="/eboa_nav/query-ers"><p class="fa fa-chevron-left"> Back to query explicit references</p></a>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Table of explicit references
+  </div>
+  <!-- /.panel-heading -->
+  <div class="panel-body">
+    <table width="100%" class="table table-striped table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>Explicit reference</th>
+          <th>Group</th>
+          <th>Ingestion time</th>
+          <th>Linked explicit references</th>
+          <th>Explicit reference UUID</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for er in ers %}
+        <tr>
+          <td>{{ er.explicit_ref }}</td>
+          <td>{{ er.group.name }}</td>
+          <td>{{ er.ingestion_time }}</td>
+          <td><a href="/eboa_nav/query-er-links/{{ er.explicit_ref_uuid }}"><i class="fa fa-link"></i></a></td>
+          <td>{{ er.explicit_ref_uuid }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+      <tfoot>
+        <tr>
+          <th>Explicit reference</th>
+          <th>Group</th>
+          <th>Ingestion time</th>
+          <th>Linked explicit references</th>
+          <th>Explicit reference UUID</th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+  <!-- /.panel-body -->
+</div>
+{% endblock %}
