--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -5,14 +5,14 @@
         <div class="col-xs-12">
           <form role="form" method=post action="/eboa_nav/query-events">
             <!-- Sources -->
-            <div class="row">
-              <div class="col-xs-3  query-sources">
+            <div class="row query-sources">
+              <div class="col-xs-3 query-source-names">
                 <label>Source like</label>
                 <input class="form-control" list="source_like_events" name="source_like"/>
                 <datalist id="source_like_events">
                 </datalist>
               </div>
-              <div class="col-xs-3  query-sources">
+              <div class="col-xs-3 query-source-names">
                 <label>Sources</label>
                 <select name="sources" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
                 </select>
